webapp/aboutussvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aboutus
  labels:
    app: aboutus
spec:
  selector:
    app: aboutus
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
