webapp/contactussvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: contactus
  labels:
    app: contactus
spec:
  selector:
    app: contactus
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
