webapp/mainpagesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainpage
  labels:
    app: mainpage
spec:
  selector:
    app: mainpage
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
